Full upgrade (#2)
* updated doc

* added upgrade plan

* upgraded a d refactor step 1

* e2e test

* fixed issues

* phase 0 complete

* phase 1 complete

* phase 1 complete

* load test complete

* added new doc

* updated documentations

* updated claude.md

* spotless apply changes

* added spotless and spotbug fixes

* added sonar mcp

* removed sonar mcp

* fix(sonar): Wave 1 — extract string constants + fix empty/assertion-free tests

S1192: Extracted duplicated string literals (≥3 occurrences) into private
static final constants across 6 production files:
- DroolsEngineService: METRIC_RULE_EXECUTION_TIME/ERROR, TAG_RULE_ID/STATUS, STATUS_ERROR
- S3RuleStorage: METRIC_STORAGE_OPERATION_TIME, TAG_OPERATION/STORAGE_TYPE/STATUS,
  STORAGE_TYPE_S3, FILE_EXT_DRL, OP_GET_RULE
- GlobalExceptionHandler: ERROR_CODE_INVALID_INPUT
- RedisRuleCache: METRIC_CACHE_MISSES, TAG_CACHE_TYPE, CACHE_TYPE_REDIS
- RuleExecutionController: METRIC_API_RESPONSE_TIME, TAG_ENDPOINT/STATUS/ERROR_TYPE,
  STATUS_ERROR, ENDPOINT_EXECUTE_RULE
- AdminController: METRIC_API_RESPONSE_TIME, TAG_ENDPOINT/STATUS/ERROR_TYPE,
  STATUS_UP/DOWN/SUCCESS/ERROR, ENDPOINT_ADMIN_HEALTH/THREAD_POOLS

S1186: Added intent comments to 5 empty stub methods in integration test
RuleStorage implementations (intentionally empty test-only stubs).

S2699 (BLOCKER): Wrapped 4 assertion-free tests in assertDoesNotThrow():
- S3ConfigTest: testSetAccessKeyId, testSetSecretAccessKey
- InMemoryRuleStorageTest: testRefreshCache, testRefreshRule

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* fix(sonar): Wave 2 — AssertJ S5838/S5853/S5976 test modernization

S5838 (20 → 0): Replaced assertThat(map.get(key)).isEqualTo(val) with
assertThat(map).containsEntry(key, val) throughout LogSanitizerTest
(20 instances across all nested classes).

S5853 (chaining): Collapsed consecutive single-subject assertThat calls
into fluent chains — 4 blocks in LogSanitizerTest (SensitiveKey,
NoSensitiveData, nested passwo