@@ -2,7 +2,7 @@ package com.company.drools.storage;
 
 import com.company.drools.api.exception.CircuitBreakerException;
 import com.company.drools.api.exception.RuleNotFoundException;
-import com.company.drools.config.TimeoutConfig;
+import com.company.drools.api.exception.RuleStorageException;
 import com.company.drools.core.model.Rule;
 import com.company.drools.core.model.RuleMetadata;
 import io.github.resilience4j.circuitbreaker.CallNotPermittedException;
@@ -13,7 +13,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -29,9 +28,16 @@ public class S3RuleStorage implements RuleStorage {
 
   private static final Logger log = LoggerFactory.getLogger(S3RuleStorage.class);
 
+  private static final String METRIC_STORAGE_OPERATION_TIME = "drools.storage.operation.time";
+  private static final String TAG_OPERATION = "operation";
+  private static final String TAG_STORAGE_TYPE = "storage_type";
+  private static final String STORAGE_TYPE_S3 = "s3";
+  private static final String TAG_STATUS = "status";
+  private static final String FILE_EXT_DRL = ".drl";
+  private static final String OP_GET_RULE = "getRule";
+
   private final S3Client s3Client;
   private final MeterRegistry meterRegistry;
-  private final TimeoutConfig timeoutConfig;
   private final CircuitBreaker s3CircuitBreaker;
 
   @Value("${drools.s3.bucket-name}")
@@ -40,11 +46,9 @@ public class S3RuleStorage implements RuleStorage {
   public S3RuleStorage(
       S3Client s3Client,
       MeterRegistry meterRegistry,
-      TimeoutConfig timeoutConfig,
       @Qualifier("s3CircuitBreaker") CircuitBreaker s3CircuitBreaker) {
     this.s3Client = s3Client;
     this.meterRegistry = meterRegistry;
-    this.timeoutConfig = timeoutConfig;
     this.s3CircuitBreaker = s3CircuitBreaker;
   }
 
@@ -81,7 +85,7 @@ public class S3RuleStorage implements RuleStorage {
 
                   return Optional.of(rule);
 
-                } catch (NoSuchKeyException e) {
+                } catch (NoSuchKeyException _) {
                   log.warn("Rule not found in S3: {} (key: {})", ruleId, s3Key);
                   return Optional.empty();
                 }
@@ -91,39 +95,34 @@ public class S3RuleStorage implements RuleStorage {
 
       // Record successful storage operation
       sample.stop(
-          Timer.builder("drools.storage.operation.time")
-              .tag("operation", "getRule")
-              .tag("storage_type", "s3")
-              .tag("status", result.isPresent() ? "success" : "not_found")
+          Timer.builder(METRIC_STORAGE_OPERATION_TIME)
+              .tag(TAG_OPERATION, OP_GET_RULE)
+              .tag(TAG_STORAGE_TYPE, STORAGE_TYPE_S3)
+              .tag(TAG_STATUS, result.isPresent() ? "success" : "not_found")
               .register(meterRegistry));
 
       return result;
 
     } catch (CallNotPermittedException e) {
-      // Circuit breaker is open
-      log.error("S3 circuit breaker is open - cannot load rule: {}", ruleId, e);
-
       // Record circuit breaker open
       sample.stop(
-          Timer.builder("drools.storage.operation.time")
-              .tag("operation", "getRule")
-              .tag("storage_type", "s3")
-              .tag("status", "circuit_breaker_open")
+          Timer.builder(METRIC_STORAGE_OPERATION_TIME)
+              .tag(TAG_OPERATION, OP_GET_RULE)
+              .tag(TAG_STORAGE_TYPE, STORAGE_TYPE_S3)
+              .tag(TAG_STATUS, "circuit_breaker_open")
               .register(meterRegistry));
 
-      throw new CircuitBreakerException("s3", s3CircuitBreaker.getState().toString(), e);
+      throw new CircuitBreakerException(STORAGE_TYPE_S3, s3CircuitBreaker.getState().toString(), e);
     } catch (SdkException e) {
-      log.error("Failed to load rule from S3: {} (key: {})", ruleId, s3Key, e);
-
       // Record failed storage operation
       sample.stop(
-          Timer.builder("drools.storage.operation.time")
-              .tag("operation", "getRule")
-              .tag("storage_type", "s3")
-              .tag("status", "error")
+          Timer.builder(METRIC_STORAGE_OPERATION_TIME)
+              .tag(TAG_OPERATION, OP_GET_RULE)
+              .tag(TAG_STORAGE_TYPE, STORAGE_TYPE_S3)
+              .tag(TAG_STATUS, "error")
               .register(meterRegistry));
 
-      throw new RuntimeException("Failed to load rule from S3: " + ruleId, e);
+      throw new RuleStorageException("Failed to load rule from S3: " + ruleId, e);
     }
   }
 
@@ -136,9 +135,9 @@ public class S3RuleStorage implements RuleStorage {
           CircuitBreaker.decorateSupplier(s3CircuitBreaker, this::loadAllRulesFromS3);
       return s3Operation.get();
 
-    } catch (CallNotPermittedException e) {
+    } catch (CallNotPermittedException _) {
       log.warn("S3 circuit breaker is open — cannot load all rules");
-      throw new CircuitBreakerException("s3", "OPEN");
+      throw new CircuitBreakerException(STORAGE_TYPE_S3, "OPEN");
     }
   }
 
@@ -153,23 +152,10 @@ public class S3RuleStorage implements RuleStorage {
         response = s3Client.listObjectsV2(request);
 
         for (S3Object s3Object : response.contents()) {
-          if (s3Object.key().endsWith(".drl")) {
+          if (s3Object.key().endsWith(FILE_EXT_DRL)) {
             String ruleId = s3KeyToRuleId(s3Object.key());
 
-            try {
-              String content =
-                  s3Client
-                      .getObjectAsBytes(
-                          GetObjectRequest.builder().bucket(bucketName).key(s3Object.key()).build())
-                      .asUtf8String();
-
-              RuleMetadata metadata = createMetadataFromS3Object(s3Object);
-              rules.add(new Rule(ruleId, content, metadata));
-
-            } catch (Exception e) {
-              log.warn("Failed to load rule: {} from S3 key: {}", ruleId, s3Object.key(), e);
-              // Continue loading other rules
-            }
+            tryLoadAndAddRule(ruleId, s3Object, rules);
           }
         }
 
@@ -179,14 +165,13 @@ public class S3RuleStorage implements RuleStorage {
                 .continuationToken(response.nextContinuationToken())
                 .build();
 
-      } while (response.isTruncated());
+      } while (Boolean.TRUE.equals(response.isTruncated()));
 
       log.info("Loaded {} rules from S3 bucket: {}", rules.size(), bucketName);
       return rules;
 
     } catch (SdkException e) {
-      log.error("Failed to list rules from S3 bucket: {}", bucketName, e);
-      throw new RuntimeException("Failed to load rules from S3", e);
+      throw new RuleStorageException("Failed to load rules from S3", e);
     }
   }
 
@@ -208,8 +193,7 @@ public class S3RuleStorage implements RuleStorage {
       log.info("Successfully saved rule: {} to S3 key: {}", rule.getRuleId(), s3Key);
 
     } catch (SdkException e) {
-      log.error("Failed to save rule to S3: {} (key: {})", rule.getRuleId(), s3Key, e);
-      throw new RuntimeException("Failed to save rule to S3: " + rule.getRuleId(), e);
+      throw new RuleStorageException("Failed to save rule to S3: " + rule.getRuleId(), e);
     }
   }
 
@@ -232,8 +216,7 @@ public class S3RuleStorage implements RuleStorage {
       log.info("Successfully deleted rule: {} from S3 key: {}", ruleId, s3Key);
 
     } catch (SdkException e) {
-      log.error("Failed to delete rule from S3: {} (key: {})", ruleId, s3Key, e);
-      throw new RuntimeException("Failed to delete rule from S3: " + ruleId, e);
+      throw new RuleStorageException("Failed to delete rule from S3: " + ruleId, e);
     }
   }
 
@@ -247,7 +230,7 @@ public class S3RuleStorage implements RuleStorage {
       s3Client.headObject(request);
       return true;
 
-    } catch (NoSuchKeyException e) {
+    } catch (NoSuchKeyException _) {
       return false;
     } catch (SdkException e) {
       log.warn("Error checking if rule exists: {} (key: {})", ruleId, s3Key, e);
@@ -279,7 +262,8 @@ public class S3RuleStorage implements RuleStorage {
 
       do {
         response = s3Client.listObjectsV2(request);
-        count += response.contents().stream().filter(obj -> obj.key().endsWith(".drl")).count();
+        count +=
+            response.contents().stream().filter(obj -> obj.key().endsWith(FILE_EXT_DRL)).count();
 
         request =
             ListObjectsV2Request.builder()
@@ -287,7 +271,7 @@ public class S3RuleStorage implements RuleStorage {
                 .continuationToken(response.nextContinuationToken())
                 .build();
 
-      } while (response.isTruncated());
+      } while (Boolean.TRUE.equals(response.isTruncated()));
 
       return count;
 
@@ -309,9 +293,9 @@ public class S3RuleStorage implements RuleStorage {
         response = s3Client.listObjectsV2(request);
         List<String> pageRuleIds =
             response.contents().stream()
-                .filter(obj -> obj.key().endsWith(".drl"))
+                .filter(obj -> obj.key().endsWith(FILE_EXT_DRL))
                 .map(obj -> s3KeyToRuleId(obj.key()))
-                .collect(Collectors.toList());
+                .toList();
         ruleIds.addAll(pageRuleIds);
 
         request =
@@ -320,7 +304,7 @@ public class S3RuleStorage implements RuleStorage {
                 .continuationToken(response.nextContinuationToken())
                 .build();
 
-      } while (response.isTruncated());
+      } while (Boolean.TRUE.equals(response.isTruncated()));
 
       return ruleIds;
 
@@ -335,7 +319,7 @@ public class S3RuleStorage implements RuleStorage {
    * "pricing/discount/simple.drl"
    */
   private String ruleIdToS3Key(String ruleId) {
-    String s3Key = ruleId.replace(".", "/") + ".drl";
+    String s3Key = ruleId.replace(".", "/") + FILE_EXT_DRL;
     if (s3Key.contains("../") || s3Key.startsWith("/")) {
       throw new IllegalArgumentException("Invalid rule ID: path traversal detected");
     }
@@ -346,9 +330,23 @@ public class S3RuleStorage implements RuleStorage {
    * Transforms S3 key path to rule ID. Example: "pricing/discount/simple.drl" ->
    * "pricing.discount.simple"
    */
+  private void tryLoadAndAddRule(String ruleId, S3Object s3Object, List<Rule> rules) {
+    try {
+      String content =
+          s3Client
+              .getObjectAsBytes(
+                  GetObjectRequest.builder().bucket(bucketName).key(s3Object.key()).build())
+              .asUtf8String();
+      RuleMetadata metadata = createMetadataFromS3Object(s3Object);
+      rules.add(new Rule(ruleId, content, metadata));
+    } catch (Exception e) {
+      log.warn("Failed to load rule: {} from S3 key: {}", ruleId, s3Object.key(), e);
+    }
+  }
+
   private String s3KeyToRuleId(String s3Key) {
     String ruleId = s3Key;
-    if (ruleId.endsWith(".drl")) {
+    if (ruleId.endsWith(FILE_EXT_DRL)) {
       ruleId = ruleId.substring(0, ruleId.length() - 4);
     }
     return ruleId.replace("/", ".");
